--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1363,6 +1363,38 @@ body {
   height: auto;
   min-height: 100vh;
 }
+.cid-qF6ZRN79GK {
+  padding-top: 135px;
+  padding-bottom: 135px;
+  background-image: url("../../../assets/images/2327-1577x479.png");
+}
+.cid-qF6ZRN79GK H1 {
+  text-align: center;
+}
+.cid-qF6jxAgdpa {
+  padding-top: 120px;
+  padding-bottom: 30px;
+  background-color: #150006;
+}
+.cid-qF6jxAgdpa .line {
+  background-color: #ff3366;
+  color: #ff3366;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-qF6jxAgdpa .section-text {
+  padding: 2rem 0;
+  color: #ffffff;
+}
+.cid-qF6jxAgdpa .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qF6jxAgdpa .inner-container {
+    width: 100% !important;
+  }
+}
 .cid-qF6SOEb1j5 {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -1424,30 +1456,6 @@ body {
   opacity: 0.7;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
-}
-.cid-qF6jxAgdpa {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background-color: #150006;
-}
-.cid-qF6jxAgdpa .line {
-  background-color: #ff3366;
-  color: #ff3366;
-  align: center;
-  height: 2px;
-  margin: 0 auto;
-}
-.cid-qF6jxAgdpa .section-text {
-  padding: 2rem 0;
-  color: #ffffff;
-}
-.cid-qF6jxAgdpa .inner-container {
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-qF6jxAgdpa .inner-container {
-    width: 100% !important;
-  }
 }
 .cid-qF6aTJFpfw .navbar {
   padding: .5rem 0;
@@ -2329,4 +2337,453 @@ body {
 }
 .cid-qF6tFgYoIm H5 {
   color: #ffffff;
+}
+.cid-qF6aTJFpfw .navbar {
+  padding: .5rem 0;
+  background: #230101;
+  transition: none;
+  min-height: 77px;
+}
+.cid-qF6aTJFpfw .navbar-dropdown.bg-color.transparent.opened {
+  background: #230101;
+}
+.cid-qF6aTJFpfw a {
+  font-style: normal;
+}
+.cid-qF6aTJFpfw .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-qF6aTJFpfw .nav-item a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+}
+.cid-qF6aTJFpfw .nav-item:focus,
+.cid-qF6aTJFpfw .nav-link:focus {
+  outline: none;
+}
+.cid-qF6aTJFpfw .btn {
+  padding: 0.4rem 1.5rem;
+  display: inline-flex;
+  align-items: center;
+}
+.cid-qF6aTJFpfw .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-qF6aTJFpfw .menu-logo {
+  margin-right: auto;
+}
+.cid-qF6aTJFpfw .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+}
+.cid-qF6aTJFpfw .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-qF6aTJFpfw .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-qF6aTJFpfw .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-qF6aTJFpfw .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-qF6aTJFpfw .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-qF6aTJFpfw .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-qF6aTJFpfw .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-qF6aTJFpfw .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-qF6aTJFpfw .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-qF6aTJFpfw .dropdown .dropdown-menu {
+  background: #230101;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-qF6aTJFpfw .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-qF6aTJFpfw .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-qF6aTJFpfw .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-qF6aTJFpfw .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-qF6aTJFpfw .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-qF6aTJFpfw .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-qF6aTJFpfw .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-qF6aTJFpfw .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-qF6aTJFpfw .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-qF6aTJFpfw .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-qF6aTJFpfw .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-qF6aTJFpfw button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-qF6aTJFpfw button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-qF6aTJFpfw button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-qF6aTJFpfw button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-qF6aTJFpfw button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qF6aTJFpfw button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qF6aTJFpfw button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-qF6aTJFpfw nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qF6aTJFpfw nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-qF6aTJFpfw nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-qF6aTJFpfw nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qF6aTJFpfw .collapsed.navbar-expand {
+  flex-direction: column;
+}
+.cid-qF6aTJFpfw .collapsed .btn {
+  display: flex;
+}
+.cid-qF6aTJFpfw .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-qF6aTJFpfw .collapsed .navbar-collapse.collapsing,
+.cid-qF6aTJFpfw .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-qF6aTJFpfw .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-qF6aTJFpfw .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-qF6aTJFpfw .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-qF6aTJFpfw .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-qF6aTJFpfw .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-qF6aTJFpfw .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-qF6aTJFpfw .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-qF6aTJFpfw .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-qF6aTJFpfw .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-qF6aTJFpfw .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-qF6aTJFpfw .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-qF6aTJFpfw .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-qF6aTJFpfw .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-qF6aTJFpfw .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-qF6aTJFpfw .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-qF6aTJFpfw .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-qF6aTJFpfw .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-qF6aTJFpfw .navbar-expand {
+    flex-direction: column;
+  }
+  .cid-qF6aTJFpfw img {
+    height: 3.8rem !important;
+  }
+  .cid-qF6aTJFpfw .btn {
+    display: flex;
+  }
+  .cid-qF6aTJFpfw button.navbar-toggler {
+    display: block;
+  }
+  .cid-qF6aTJFpfw .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-qF6aTJFpfw .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-qF6aTJFpfw .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-qF6aTJFpfw .navbar-collapse.collapsing,
+  .cid-qF6aTJFpfw .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-qF6aTJFpfw .navbar-collapse.collapsing .navbar-nav,
+  .cid-qF6aTJFpfw .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-qF6aTJFpfw .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-qF6aTJFpfw .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-qF6aTJFpfw .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-qF6aTJFpfw .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-qF6aTJFpfw .navbar-collapse.collapsing .navbar-buttons,
+  .cid-qF6aTJFpfw .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-qF6aTJFpfw .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-qF6aTJFpfw .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-qF6aTJFpfw .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-qF6aTJFpfw .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-qF6aTJFpfw .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-qF6aTJFpfw .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-qF6aTJFpfw .menu-logo {
+    flex-shrink: 0;
+  }
+}
+.cid-qF6aTJFpfw .navbar-collapse {
+  flex-basis: auto;
+}
+.cid-qF6aTJFpfw .nav-link:hover,
+.cid-qF6aTJFpfw .dropdown-item:hover {
+  color: #c1c1c1 !important;
+}
+.cid-qF753C9bQ5 {
+  background: #ffffff;
+  background: linear-gradient(0deg, #230101, #ffffff);
+}
+.cid-qF753C9bQ5 .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qF753C9bQ5 figcaption {
+  position: relative;
+}
+.cid-qF753C9bQ5 figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qF753C9bQ5 .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qF761oFidw {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #333333;
+}
+.cid-qF761oFidw h2 {
+  text-align: center;
+}
+.cid-qF761oFidw h4 {
+  text-align: center;
+  z-index: 1;
+  color: #ffffff;
+}
+.cid-qF761oFidw p {
+  z-index: 1;
+  margin-bottom: 0;
+  color: #ffffff;
+}
+.cid-qF761oFidw .media-container-row {
+  word-wrap: break-word;
+  word-break: break-word;
+  align-items: stretch;
+  -webkit-align-items: stretch;
+}
+.cid-qF761oFidw .card-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+.cid-qF761oFidw .card-img img {
+  z-index: -1;
+  min-height: 100%;
+  min-width: 100%;
+  width: auto;
+  max-width: 600px;
 }
