create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2238,7 +2238,7 @@ body {
 .cid-qF6tFgYoIm {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/greedy-jacks-550x363.jpg");
+  background-color: #080000;
 }
 .cid-qF6tFgYoIm .mbr-iconfont {
   font-size: 48px;
