--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1372,13 +1372,13 @@ body {
   text-align: center;
 }
 .cid-qF6jxAgdpa {
-  padding-top: 120px;
+  padding-top: 30px;
   padding-bottom: 30px;
   background-color: #150006;
 }
 .cid-qF6jxAgdpa .line {
-  background-color: #ff3366;
-  color: #ff3366;
+  background-color: #e24209;
+  color: #e24209;
   align: center;
   height: 2px;
   margin: 0 auto;
@@ -1396,8 +1396,8 @@ body {
   }
 }
 .cid-qF6SOEb1j5 {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #150006;
 }
 .cid-qF6SOEb1j5 .mbr-slider .carousel-control {
@@ -1422,7 +1422,6 @@ body {
   width: 100%;
   height: 100%;
   background: #554346;
-  background: linear-gradient(to left, #554346, #45505b) !important;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
@@ -1452,7 +1451,6 @@ body {
   z-index: -1;
   position: absolute;
   background: #554346 !important;
-  background: linear-gradient(to left, #554346, #45505b) !important;
   opacity: 0.7;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
