create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1395,6 +1395,9 @@ body {
     width: 100% !important;
   }
 }
+.cid-qF6jxAgdpa .section-text DIV {
+  text-align: center;
+}
 .cid-qF6SOEb1j5 {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -2234,8 +2237,8 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-qF6tFgYoIm {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 120px;
+  padding-bottom: 105px;
   background-color: #080000;
 }
 .cid-qF6tFgYoIm .mbr-iconfont {
