--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1464,6 +1464,32 @@ body {
 .cid-qF6jxAgdpa .section-text SPAN {
   color: #ffffff;
 }
+.cid-qF7R5H2IkG .google-map {
+  height: 25rem;
+  position: relative;
+}
+.cid-qF7R5H2IkG .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-qF7R5H2IkG .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-qF7R5H2IkG .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-qF7R5H2IkG .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
 .cid-qF6aTJFpfw .navbar {
   padding: .5rem 0;
   background: #230101;
