create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1374,7 +1374,7 @@ body {
 .cid-qF6SOEb1j5 {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #331104;
+  background-color: #1d0d08;
 }
 .cid-qF6SOEb1j5 .mbr-slider .carousel-control {
   background: #1b1b1b;
