--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1372,9 +1372,9 @@ body {
   text-align: center;
 }
 .cid-qF6SOEb1j5 {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #000000;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #40251b;
 }
 .cid-qF6SOEb1j5 .mbr-slider .carousel-control {
   background: #1b1b1b;
@@ -1398,6 +1398,7 @@ body {
   width: 100%;
   height: 100%;
   background: #150006;
+  background: linear-gradient(to left, #150006, #ff4200) !important;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
@@ -1406,7 +1407,7 @@ body {
   background: transparent !important;
 }
 .cid-qF6SOEb1j5 .mbr-gallery-item > div:hover:before {
-  opacity: 0.4 !important;
+  opacity: 0.8 !important;
 }
 .cid-qF6SOEb1j5 .mbr-gallery-title {
   font-size: .9em;
@@ -1427,7 +1428,8 @@ body {
   z-index: -1;
   position: absolute;
   background: #150006 !important;
-  opacity: 0.4;
+  background: linear-gradient(to left, #150006, #ff4200) !important;
+  opacity: 0.8;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
 }
