--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
+@import url(https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700);
 
 
 
@@ -34,7 +35,7 @@ body {
   font-size: 4.8rem;
 }
 .display-4 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Oswald', sans-serif;
   font-size: 1rem;
 }
 .display-4 > .mbr-iconfont {
@@ -129,7 +130,7 @@ body {
   border-radius: 3px;
 }
 .bg-primary {
-  background-color: #ffa300 !important;
+  background-color: #976a19 !important;
 }
 .bg-success {
   background-color: #f7ed4a !important;
@@ -145,8 +146,8 @@ body {
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #ffa300;
-  border-color: #ffa300;
+  background-color: #976a19;
+  border-color: #976a19;
   color: #ffffff;
 }
 .btn-primary:hover,
@@ -154,14 +155,14 @@ body {
 .btn-primary.focus,
 .btn-primary.active {
   color: #ffffff;
-  background-color: #b37200;
-  border-color: #b37200;
+  background-color: #553c0e;
+  border-color: #553c0e;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff !important;
-  background-color: #b37200 !important;
-  border-color: #b37200 !important;
+  background-color: #553c0e !important;
+  border-color: #553c0e !important;
 }
 .btn-secondary,
 .btn-secondary:active {
@@ -309,22 +310,22 @@ body {
 .btn-primary-outline,
 .btn-primary-outline:active {
   background: none;
-  border-color: #996200;
-  color: #996200;
+  border-color: #3f2d0b;
+  color: #3f2d0b;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus,
 .btn-primary-outline.active {
   color: #ffffff;
-  background-color: #ffa300;
-  border-color: #ffa300;
+  background-color: #976a19;
+  border-color: #976a19;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
   color: #ffffff !important;
-  background-color: #ffa300 !important;
-  border-color: #ffa300 !important;
+  background-color: #976a19 !important;
+  border-color: #976a19 !important;
 }
 .btn-secondary-outline,
 .btn-secondary-outline:active {
@@ -461,7 +462,7 @@ body {
   border-color: #ffffff;
 }
 .text-primary {
-  color: #ffa300 !important;
+  color: #976a19 !important;
 }
 .text-secondary {
   color: #fd4300 !important;
@@ -486,7 +487,7 @@ body {
 }
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #996200 !important;
+  color: #3f2d0b !important;
 }
 a.text-secondary:hover,
 a.text-secondary:focus {
@@ -538,8 +539,8 @@ a.text-black:focus {
   border-radius: 100px !important;
 }
 .mbr-gallery-filter li.active .btn {
-  background-color: #ffa300;
-  border-color: #ffa300;
+  background-color: #976a19;
+  border-color: #976a19;
   color: #ffffff;
 }
 .mbr-gallery-filter li.active .btn:focus {
@@ -556,11 +557,11 @@ a.text-black:focus {
 }
 a,
 a:hover {
-  color: #ffa300;
+  color: #976a19;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #ffedcc;
+  color: #e2ad4e;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -678,7 +679,7 @@ blockquote {
   padding: 10px 0 10px 20px;
   font-size: 1.09rem;
   position: relative;
-  border-color: #ffa300;
+  border-color: #976a19;
   border-width: 3px;
 }
 ul,
@@ -766,7 +767,7 @@ pre {
   text-align: center;
   position: relative;
   border: 2px solid #c0a375;
-  border-color: #ffa300;
+  border-color: #976a19;
   color: #232323;
   cursor: pointer;
 }
@@ -777,7 +778,7 @@ pre {
 }
 .btn-social:hover {
   color: #fff;
-  background: #ffa300;
+  background: #976a19;
 }
 .btn-social + .btn {
   margin-left: .1rem;
@@ -785,11 +786,11 @@ pre {
 /* Footer */
 .mbr-footer-content li::before,
 .mbr-footer .mbr-contacts li::before {
-  background: #ffa300;
+  background: #976a19;
 }
 .mbr-footer-content li a:hover,
 .mbr-footer .mbr-contacts li a:hover {
-  color: #ffa300;
+  color: #976a19;
 }
 .footer3 input[type="email"],
 .footer4 input[type="email"] {
@@ -1492,8 +1493,8 @@ body {
   color: #ff4200;
 }
 .cid-qFbO6zRuqJ {
-  padding-top: 75px;
-  padding-bottom: 75px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .cid-qFbO6zRuqJ .mbr-section-subtitle {
   color: #ffffff;
@@ -1541,7 +1542,7 @@ body {
   height: 100%;
 }
 .cid-qFbO6zRuqJ .card-wrapper .card-box {
-  background-color: #310d00;
+  background-color: #732408;
   padding: 0 2rem 2rem 2rem;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
@@ -1554,7 +1555,6 @@ body {
 .cid-qFbO6zRuqJ .card-wrapper .card-box p {
   margin-bottom: 0;
   padding-top: 1.5rem;
-  padding-top: 2rem;
 }
 .cid-qFbO6zRuqJ .card-wrapper:hover {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
@@ -1577,9 +1577,13 @@ body {
 }
 .cid-qFbO6zRuqJ .card-title {
   color: #ffffff;
+  text-align: center;
 }
 .cid-qFbO6zRuqJ .mbr-section-title {
   color: #ffffff;
+}
+.cid-qFbO6zRuqJ .card-title B {
+  color: #ffa300;
 }
 .cid-qF7R5H2IkG .google-map {
   height: 25rem;
