create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1367,7 +1367,7 @@ body {
 .cid-qF6ZRN79GK {
   padding-top: 135px;
   padding-bottom: 135px;
-  background-image: url("../../../assets/images/2327-1577x479.png");
+  background-image: url("../../../assets/images/2328-1600x476.png");
 }
 .cid-qF6ZRN79GK H1 {
   text-align: center;
@@ -1613,12 +1613,12 @@ body {
 }
 .cid-qF6aTJFpfw .navbar {
   padding: .5rem 0;
-  background: #40251b;
+  background: #d23700;
   transition: none;
   min-height: 77px;
 }
 .cid-qF6aTJFpfw .navbar-dropdown.bg-color.transparent.opened {
-  background: #40251b;
+  background: #d23700;
 }
 .cid-qF6aTJFpfw a {
   font-style: normal;
@@ -1702,7 +1702,7 @@ body {
   padding-bottom: 0;
 }
 .cid-qF6aTJFpfw .dropdown .dropdown-menu {
-  background: #40251b;
+  background: #d23700;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1773,7 +1773,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #1d0d08;
+  background-color: #ffffff;
 }
 .cid-qF6aTJFpfw button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2075,12 +2075,12 @@ body {
 }
 .cid-qF6aTJFpfw .navbar {
   padding: .5rem 0;
-  background: #40251b;
+  background: #000000;
   transition: none;
   min-height: 77px;
 }
 .cid-qF6aTJFpfw .navbar-dropdown.bg-color.transparent.opened {
-  background: #40251b;
+  background: #000000;
 }
 .cid-qF6aTJFpfw a {
   font-style: normal;
@@ -2164,7 +2164,7 @@ body {
   padding-bottom: 0;
 }
 .cid-qF6aTJFpfw .dropdown .dropdown-menu {
-  background: #40251b;
+  background: #000000;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2567,12 +2567,12 @@ body {
 }
 .cid-qF6aTJFpfw .navbar {
   padding: .5rem 0;
-  background: #40251b;
+  background: #000000;
   transition: none;
   min-height: 77px;
 }
 .cid-qF6aTJFpfw .navbar-dropdown.bg-color.transparent.opened {
-  background: #40251b;
+  background: #000000;
 }
 .cid-qF6aTJFpfw a {
   font-style: normal;
@@ -2656,7 +2656,7 @@ body {
   padding-bottom: 0;
 }
 .cid-qF6aTJFpfw .dropdown .dropdown-menu {
-  background: #40251b;
+  background: #000000;
   display: none;
   position: absolute;
   min-width: 5rem;
