--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
+@import url(https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i);
 @import url(https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700);
 
 
@@ -49,7 +50,7 @@ body {
   font-size: 2.4rem;
 }
 .display-7 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Lora', serif;
   font-size: 1rem;
 }
 .display-7 > .mbr-iconfont {
@@ -130,7 +131,7 @@ body {
   border-radius: 3px;
 }
 .bg-primary {
-  background-color: #976a19 !important;
+  background-color: #865d14 !important;
 }
 .bg-success {
   background-color: #f7ed4a !important;
@@ -146,8 +147,8 @@ body {
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #976a19;
-  border-color: #976a19;
+  background-color: #865d14;
+  border-color: #865d14;
   color: #ffffff;
 }
 .btn-primary:hover,
@@ -155,14 +156,14 @@ body {
 .btn-primary.focus,
 .btn-primary.active {
   color: #ffffff;
-  background-color: #553c0e;
-  border-color: #553c0e;
+  background-color: #432f0a;
+  border-color: #432f0a;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff !important;
-  background-color: #553c0e !important;
-  border-color: #553c0e !important;
+  background-color: #432f0a !important;
+  border-color: #432f0a !important;
 }
 .btn-secondary,
 .btn-secondary:active {
@@ -310,22 +311,22 @@ body {
 .btn-primary-outline,
 .btn-primary-outline:active {
   background: none;
-  border-color: #3f2d0b;
-  color: #3f2d0b;
+  border-color: #2d1f07;
+  color: #2d1f07;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus,
 .btn-primary-outline.active {
   color: #ffffff;
-  background-color: #976a19;
-  border-color: #976a19;
+  background-color: #865d14;
+  border-color: #865d14;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
   color: #ffffff !important;
-  background-color: #976a19 !important;
-  border-color: #976a19 !important;
+  background-color: #865d14 !important;
+  border-color: #865d14 !important;
 }
 .btn-secondary-outline,
 .btn-secondary-outline:active {
@@ -462,7 +463,7 @@ body {
   border-color: #ffffff;
 }
 .text-primary {
-  color: #976a19 !important;
+  color: #865d14 !important;
 }
 .text-secondary {
   color: #fd4300 !important;
@@ -487,7 +488,7 @@ body {
 }
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #3f2d0b !important;
+  color: #2d1f07 !important;
 }
 a.text-secondary:hover,
 a.text-secondary:focus {
@@ -539,8 +540,8 @@ a.text-black:focus {
   border-radius: 100px !important;
 }
 .mbr-gallery-filter li.active .btn {
-  background-color: #976a19;
-  border-color: #976a19;
+  background-color: #865d14;
+  border-color: #865d14;
   color: #ffffff;
 }
 .mbr-gallery-filter li.active .btn:focus {
@@ -557,11 +558,11 @@ a.text-black:focus {
 }
 a,
 a:hover {
-  color: #976a19;
+  color: #865d14;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #e2ad4e;
+  color: #e1a438;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -648,7 +649,7 @@ a:hover {
   background-color: #f5f5f5;
   box-shadow: none;
   color: #565656;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Lora', serif;
   font-size: 1rem;
   line-height: 1.43;
   min-height: 3.5em;
@@ -679,7 +680,7 @@ blockquote {
   padding: 10px 0 10px 20px;
   font-size: 1.09rem;
   position: relative;
-  border-color: #976a19;
+  border-color: #865d14;
   border-width: 3px;
 }
 ul,
@@ -767,7 +768,7 @@ pre {
   text-align: center;
   position: relative;
   border: 2px solid #c0a375;
-  border-color: #976a19;
+  border-color: #865d14;
   color: #232323;
   cursor: pointer;
 }
@@ -778,7 +779,7 @@ pre {
 }
 .btn-social:hover {
   color: #fff;
-  background: #976a19;
+  background: #865d14;
 }
 .btn-social + .btn {
   margin-left: .1rem;
@@ -786,11 +787,11 @@ pre {
 /* Footer */
 .mbr-footer-content li::before,
 .mbr-footer .mbr-contacts li::before {
-  background: #976a19;
+  background: #865d14;
 }
 .mbr-footer-content li a:hover,
 .mbr-footer .mbr-contacts li a:hover {
-  color: #976a19;
+  color: #865d14;
 }
 .footer3 input[type="email"],
 .footer4 input[type="email"] {
