--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2236,7 +2236,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #d23700;
+  background-color: #ffa300;
 }
 .cid-qF6aTJFpfw button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2728,7 +2728,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #d23700;
+  background-color: #ffa300;
 }
 .cid-qF6aTJFpfw button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
