--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1559,6 +1559,9 @@ body {
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
 }
+.cid-qF6SOEb1j5 .mbr-gallery-item > div > span {
+  text-align: center;
+}
 .cid-qFbUonqehZ {
   padding-top: 15px;
   padding-bottom: 30px;
