--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2464,7 +2464,7 @@ body {
 }
 .cid-qF6aTJFpfw .nav-link:hover,
 .cid-qF6aTJFpfw .dropdown-item:hover {
-  color: #f7ed4a !important;
+  color: #efefef !important;
 }
 .cid-qF6tFgYoIm {
   padding-top: 120px;
@@ -2956,7 +2956,7 @@ body {
 }
 .cid-qF6aTJFpfw .nav-link:hover,
 .cid-qF6aTJFpfw .dropdown-item:hover {
-  color: #f7ed4a !important;
+  color: #efefef !important;
 }
 .cid-qF753C9bQ5 {
   background: #ffffff;
